--- a/src/components/User/Modal.css
+++ b/src/components/User/Modal.css
@@ -27,15 +27,15 @@
     border: none;
     cursor: pointer;
     font-size: 18px;
-    color: #333; /* Text color for the close button */
-    padding: 5px 10px; /* Padding for the close button */
-    border-radius: 4px; /* Border-radius for rounded corners */
-    background-color: #ddd; /* Background color for the close button */
-    transition: background-color 0.3s ease; /* Transition effect for background color on hover */
+    color: #333; 
+    padding: 5px 10px; 
+    border-radius: 4px; 
+    background-color: #ddd; 
+    transition: background-color 0.3s ease; 
   
-    /* Add hover effect */
+   
     &:hover {
-      background-color: #aaa; /* Change background color on hover */
+      background-color: #aaa; 
     }
   }
   
